--- a/src/pages/sign-in-page.pug
+++ b/src/pages/sign-in-page.pug
@@ -10,10 +10,10 @@ include ../blocks/date-dropdown/date-dropdown
 include ../blocks/dropdown-choose/dropdown-choose
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='favicons/favicon-16x16.png')
-  link(rel='manifest' href='favicons/site.webmanifest')
+  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
+  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
+  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
+  link(rel='manifest' href='assets/favicons/site.webmanifest')
 
 block content
   +header({isEntered: false})
